kotlin-ide/idea/testData/gradle/importAndCheckHighlighting/macosTargets/src/commonMain/kotlin/sample/common.kt
package sample

expect class <!LINE_MARKER("descr='Has actuals in Native (2 modules)'")!>Platform<!>() {
    val <!LINE_MARKER("descr='Has actuals in Native (2 modules)'")!>name<!>: String
}